--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
 				00:00:00
 			</div>
 			<div class="ucapan" id="quote"></div>
-			<div class="note">ngeng</div>
-			<div class="pengembang">Andika Sujanadi</div>
+			<div class="note">ngenggg</div>
+			<div class="pengembang">m1j3yy</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -511,10 +511,10 @@
 			}
 			function specialEffects(){
 				if(localStorage.getItem("manualColor")=="#4c1130"){
-					setTimeout(function() { createNote("Mangat Din ngepush course javascriptnya :v"); }, 5000);
+					setTimeout(function() { createNote("Lopyuuuu"); }, 5000);
 				}
 				else if(localStorage.getItem("manualColor")=="#000000"){
-					setTimeout(function() { createNote("Buat belajar bro, bukan buat neko neko :v"); }, 5000);
+					setTimeout(function() { createNote("Semangat bee UTS na, lmun ek nonton drakor kudu habis selesai pts na bisi telat deui kteh <("); }, 5000);
 				}
 			}
 			function createNote(isi){
@@ -848,7 +848,7 @@
 				console.log('debug');
 			}
 
-			var txt = 'Halo simp ku sayang';
+			var txt = 'Halo NbL4 ku sayang';
 			var txt2 = 'txt';
 
 			function checkTime(i) {
@@ -872,43 +872,43 @@
 				S=s;
 
 				if (H<5){
-					txt='Have a Good Night:)';
+					txt='Have a Good Night:) bil';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<9){
-					txt='Good Morning You:)';
+					txt='Good Morning You:) bil';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<12){
-					txt='Be Happy Today:)';
+					txt='Be Happy Today:) bil';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<16){
-					txt='Good Afternoon Dear:)';
+					txt='Good Afternoon bee:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<19){
-					txt='Good Afternoon, Take a Rest:)';
+					txt='Good Afternoon, Take a Rest:) ceng';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<23){
-					txt='Good Evening Sweetie:)';
+					txt='Good Evening Sweetie:) bee';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<=24){
-					txt='Time to Sleep, Good Night:)';
+					txt='Time to Sleep, Good Night:) bee, kade ulah ngadrakor wae ';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -981,20 +981,20 @@
 			    "source": "Imam Syafi'i"
 			  },
 			  {
-			    "quote": "Just because I carry it all so well doesn't mean it's not heavy",
-			    "source": "Andika Sujanadi"
+			    "quote": "Kita tidak bisa menyamakan kopi dengan air tebu. Sesempurna apa pun kopi yang kamu buat, kopi tetap kopi, punya sisi pahit yang tak mungkin kamu sembunyikan.",
+			    "source": "deelestari"
 			  },
 			  {
-			    "quote": "Semesta memiliki alurnya masing-masing",
-			    "source": "Andika Sujanadi"
+			    "quote": "Secangkir kopi hadirkan inspirasi, sebatang rokok tenangkan hati.",
+			    "source": "Miz3yyy"
 			  },
 			  {
-			    "quote": "You don't lose, You learn",
-			    "source": "Andika Sujanadi"
+			    "quote": "Kaulah kolam kopi yang membuatku tak bisa terpejam, memikirkanmu sepanjang malam",
+			    "source": "Iwan Esjepe "
 			  },
 			  {
-			    "quote": "I own my own life and my own decission",
-			    "source": "Andika Sujanadi"
+			    "quote": "Anak STM itu lebih suka praktek ketimbang teori.",
+			    "source": "Unknown"
 			  },
 			  {
 			    "quote": "Every failure, rejection, betrayal should be the reason for you to come back stronger in life by working on goals and achiving them",
