--- a/you/index.html
+++ b/you/index.html
@@ -179,7 +179,7 @@ const run = setInterval(function() {
   <!-- Akhir Dari Percakapan -->
   
     <!-- Lagunya bebas Kalian Ganti, gantinya di sini ya -->
-      <audio src="/lagu/Gustixa - lemon tree.mp3" id="rex"></audio>
+      <audio src="/lagu/ampyx-rise.mp3" id="rex"></audio>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
