--- a/you/index.html
+++ b/you/index.html
@@ -81,7 +81,7 @@ const run = setInterval(function() {
       <br>
       <button type="button" class="btn btn-primary" onclick="myShow.next()">Next Words</button>
       <audio id="myAudio">
-  <source src="https://raw.githubusercontent.com/mzr-d3bz/blekhet/master/peradaban.mp3" type="audio/mpeg">
+  <source src=" mzr-d3bz.github.io/you/lagu/Yahya-keepyousafe.mp3" type="audio/mpeg">
 </audio>
 <button onclick="playAudio(); changeBodyBg();" type="button">Putar Lagu</button>
 <script>
