--- a/you/index.html
+++ b/you/index.html
@@ -97,7 +97,7 @@ function playAudio() {
     </div>
     
         <div class="col-6 nature">
-      <h3 class="font">Udah di putar lagu nya? Kenal ngga lagu ini? Iya ini lagu salah satu dari playlist favorite kamu wkwkw</h3>
+      <h3 class="font">Udah di putar lagu nya? Kenal ngga lagu ini? Iya ini beberapa lagu yang dari playlist favorit kamu, yang calm gitu ahahahay</h3>
       <br>
       <button type="button" class="btn btn-primary" onclick="myShow.next()">Next Words</button>
 
